# aegis-emu

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
